# Flight-Sim-CI-Pipeline

./: .gitignore  BUILD  Makefile  README.md  WORKSPACE  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
sim/: __init__.py  cli.py  physics.py  rpc.py  scenarios.py  telemetry.py
telemetry/: golden_takeoff_landing.csv
tests/: test_checksum.py  test_golden_takeoff.py  test_latency_loss.py  test_takeoff_profile.py
